--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BrInt Audientes</string>
+    <string name="app_name">C4 Audientes</string>
     <string name="library_text">Sound Library</string>
 
     <string name="some_id">
